--- a/static/tabs.css
+++ b/static/tabs.css
@@ -5,6 +5,12 @@ body{
   background-color: rgb(255, 255, 255);
 }
 
+.main{
+  margin-left: 140px; /* Same width as the sidebar + left position in px */
+  font-size: 20px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
+}
+
 /*Style the input box */
 .form input[type = number]{
   background-color: rgb(245, 198, 127);
