--- a/static/sidebar.css
+++ b/static/sidebar.css
@@ -1,47 +1,54 @@
 .sidenav {
-    width: 130px;
-    position: fixed;
-    z-index: 1;
-    top: 80px;
-    left: 10px;
-    background: rgb(10, 232, 248);
-    overflow-x: hidden;
-    padding: 8px 0;
-  }
+  width: 130px;
+  position: fixed;
+  z-index: 1;
+  top: 80px;
+  left: 10px;
+  background: rgb(0, 178, 190);
+  overflow-x: hidden;
+  padding: 8px 0;
+}
   
-  .sidenav a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #2196F3;
-    display: block;
-  }
-  
-  .sidenav a:hover {
-    color: #064579;
-  }
+.sidenav button {
+  background-color: rgb(7, 61, 241);
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #f1f2f3;
+  display: block;
+  width: 130px;
+}
 
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+.sidenav button:hover {
+  color: #47e1f5;
+}
 
-  /*Style the tab */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav button {font-size: 18px;}
+}
+
+/*Style the tab */
 .pagecontent{
-  overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #410ff7;
+overflow: hidden;
+border: 1px solid #ccc;
+background-color: rgb(0, 178, 190);
 }
 
 /*Style the buttons that are used to open the tab content*/
 .pagecontent button{
-background-color: rgb(9, 177, 243);
+background-color: rgb(209, 24, 233);
 float: left;
-border: none;
 outline: none;
 cursor: pointer;
-padding: 14px 16px;
+padding: 14px 14px;
 transition: 0.3s;
+
+padding: 6px 8px 6px 16px;
+text-decoration: none;
+font-size: 25px;
+color: #f1f2f3;
+display: block;
 }
 
 /*Chnage background color of buttons on hover*/
@@ -51,7 +58,7 @@ background-color: rgb(248, 11, 11);
 
 /*Create an active/current tablink class */
 .pagecontent button.active {
-background-color: rgb(95, 63, 238);
+background-color: rgb(211, 34, 48);
 
 }
 
@@ -63,3 +70,4 @@ height: 100%;
 border: 1px solid #ccc;
 border-top: none;
 }
+
