Added "About" button on sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,9 @@
 
   <!--script src="/static/tabs.js" charset="utf-8"></script-->
   <div class="sidenav">
-    <a href="#about">About</a>
     <button class="pagelinks" onclick="openPage(event, 'tagtabs')">Tags</button><br>
-    <button class="pagelinks" onclick="openPage(event, 'scripttabs')">Scripts</button>
-    <a href="#services">Services</a>
+    <button class="pagelinks" onclick="openPage(event, 'scripttabs')">Scripts</button><br>
+    <button href="/about">About</button>
   </div>
 
   <!--main contains the tabs for the tags and the tab content-->
