--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,14 @@
 
 
     <div id="tab3" class="tabcontent">
-      <h3>VFD Discrete Tags</h3>
-      <p>Disconnect, Fault Disconnect, Fault Communication, Fault Device, Fault Ready and Fault FailedForward</p>
+      <h3>VFD Tags</h3>
+      <p>Discrete: Disconnect, Fault Disconnect, Fault Communication, Fault Device, Fault Ready and Fault FailedForward</p><br>
+      <p>Integer: CSW, RunTmr, ForwardWdgTmr, Speed Ref, Max Frequency, Min Frequency </p>
       <center>
         <font color="black" size="4" style="font-family: avenir">
-          <h1 style="color: DodgerBlue">VFD Discrete Tags</h1>
+          <h1 style="color: DodgerBlue">VFD Tags</h1>
           <!--body bgcolor="white"-->
-            <form action="/VFDDiscreteTags" autocomplete="on" method = "POST" enctype="multipart/form-data">
+            <form action="/VFDTags" autocomplete="on" method = "POST" enctype="multipart/form-data">
                 First VFD:<br> <input type="number" name="first_vfd" ><br><br>
                 Last VFD:<br> <input type="number" name="last_vfd" ><br><br>
                 Conveyor Type:<br>
