Updated form titles for pkgautosys and rev gates

--- a/templates/index.html
+++ b/templates/index.html
@@ -190,8 +190,8 @@
       <p>Discrete: Auto PB, Manual Mode, Manual Close, Manual Open, Open</p>
       <center>
         <font color="black" size="4" style="font-family: avenir">
-          <h1 style="color: DodgerBlue">Slide gates Tags</h1>
-            <form action="/lt" autocomplete="off" method = "POST" enctype="multipart/form-data">
+          <h1 style="color: DodgerBlue">Slide Gates Tags</h1>
+            <form action="/sg" autocomplete="off" method = "POST" enctype="multipart/form-data">
                 First Gate:<br> <input type="number" name="first_gate" ><br><br>
                 Last Gate:<br> <input type="number" name="last_gate" ><br><br>
                 Gate Number:<br> <input type="number" name="gate_number" ><br><br>
@@ -239,7 +239,7 @@
       <p>Integer: WeighMod, WeighMod_Gate</p>
       <center>
         <font color="black" size="4" style="font-family: avenir">
-          <h1 style="color: DodgerBlue">PAFA Tags</h1>
+          <h1 style="color: DodgerBlue">PkgAutoSys Tags</h1>
           <!--body bgcolor = "blue"-->
             <form action="/pkgautosys" autocomplete="on" method = "POST" enctype="multipart/form-data">
               First Module:<br> <input type="number" name="first_module" ><br><br>
@@ -260,7 +260,7 @@
       <p>Real: Angle Manual, MPM, Angle Stats, Product Available, Position SP, Product Hole</p>
       <center>
         <font color="black" size="4" style="font-family: avenir">
-          <h1 style="color: DodgerBlue">PAFA Tags</h1>
+          <h1 style="color: DodgerBlue">Rev Gates Tags</h1>
           <!--body bgcolor = "blue"-->
             <form action="/revgates" autocomplete="on" method = "POST" enctype="multipart/form-data">
               First Gate:<br> <input type="number" name="first_gate" ><br><br>
